[package]
name = "solana-basics"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "2.1.0"
solana-program = "2.1.0"
borsh = "1.5.0"
thiserror = "2.0.3"

[dev-dependencies]
solana-program-test = "2.1.0"
solana-sdk = "2.1.0"
tokio = { version = "1.42.0", features = ["full"] }

[lib]
crate-type = ["cdylib", "lib"]
